--- a/index.html
+++ b/index.html
@@ -335,10 +335,10 @@
               <a href="community"><h6 class="footer-link">Eventos</h6></a>
             </div>
             <div class="col-7 col-md-3 policies">
-              <a href="" class="footer-link"><small>Perguntas frequentes</small></a>
-              <a href="" class="footer-link"><small>Termos e Condições</small></a>
-              <a href="" class="footer-link"><small>Política de Privacidade</small></a>
-              <a href="" class="footer-link"><small>Livro de reclamações</small></a>
+              <a href="faqs.html" class="footer-link"><small>Perguntas frequentes</small></a>
+              <a href="terms-conditions.html" class="footer-link"><small>Termos e Condições</small></a>
+              <a href="privacy-policy.html" class="footer-link"><small>Política de Privacidade</small></a>
+              <a href="complaint-book" class="footer-link"><small>Livro de reclamações</small></a>
             </div>
             <div class="col-12 col-md-4 newsletter">
               <label>Fica a par das novidades</label>
