--- a/brewery.html
+++ b/brewery.html
@@ -109,18 +109,18 @@
         <section class="fullscreen-wrapper present-section light-section d-flex justify-content-between flex-column">
           <img class="bg-texture" src="assets/images/background-texture-process.png" alt="Seeds Background">
           <div class="row">
-            <div class="present-title-col col-md-7 offset-md-2">
+            <div class="present-title-col col-sm-6 col-lg-7 offset-lg-2">
               <h3 class="present-title">Malte<br>Água de coimbra<br>Lúpulo...<br>É Cerveja Praxis</h3>
             </div>
-            <div class="present-beer col-md-3">
+            <div class="present-beer col-md-7 col-lg-3">
               <img class="present-beer-img" src="assets/images/beer-process-present.png">
             </div>
           </div>
           <div class="row">
-            <div class="present-trademark-col col-2 col-md-2 d-flex justify-content-center">
+            <div class="present-trademark-col col-2 d-flex justify-content-center">
               <img class="present-trademark" src="assets/images/reinheitsgebot-trademark.png">
             </div>
-            <div class="present-trademark-col col-12 col-md-6 d-flex align-items-center">
+            <div class="present-trademark-col col-12 col-md-10 col-lg-6 d-flex align-items-center">
               <h5 class="present-trademark-name">"Reinheitsgebot", 23 de Abril de 1516<br>- Lei da Pureza da Cerveja</h5>
             </div>
           </div>
@@ -128,10 +128,10 @@
 
         <section class="process-section">
           <div class="row process-intro-wrapper">
-            <div class="col-12 col-md-5">
+            <div class="col-sm-12 col-lg-5">
               <h3 class="process-intro-title">Processo de fabrico da nossa cerveja</h3>
             </div>
-            <div class="col-12 col-md-5 offset-md-1">
+            <div class="col-sm-10 col-lg-5 offset-lg-1">
               <h5 class="mb-40">A nossa Cerveja, é produzida segundo um processo 100% NATURAL
 onde a selecção da matéria-prima é o principal segredo, começando pela ÁGUA DE COIMBRA.</h5>
               <button class="button dark">Visitar museu</button>
@@ -142,7 +142,7 @@ onde a selecção da matéria-prima é o principal segredo, começando pela ÁGU
             <div class="col-12 col-md-7">
               <div class="parallax-window" data-parallax="scroll" data-speed=".7" data-image-src="assets/images/process/malt-grains-lg.jpg"></div>
             </div>
-            <div class="col-11 col-md-4 offset-md-1 process-phase-container">
+            <div class="col-11 col-md-5 col-lg-4 offset-lg-1 process-phase-container">
               <h3 class="process-phase-title">Maltagem</h3>
               <h5 class="process-phase-description">Os grãos são prep­­arados para o fabrico de cerveja.
                  O grão é adicionado a um tanque com água, dando em seguida a germinação. 
@@ -152,12 +152,12 @@ onde a selecção da matéria-prima é o principal segredo, começando pela ÁGU
           </div>
 
           <div class="row rightsided-wrapper process-phase">
-            <div class="col-11 col-md-4 switcher-top process-phase-container">
+            <div class="col-11 col-md-5 col-lg-4 switcher-top process-phase-container">
               <h3 class="process-phase-title">Brassagem</h3>
               <h5 class="process-phase-description">Converte os amidos libertados na fase da maltagem em açúcares que podem ser fermentados, formando-se o mosto que depois é filtrado.</h5>
               <img class="illustrated-img" src="assets/images/process/brazing-illu.png">
             </div>
-            <div class="col-12 col-md-7 offset-md-1 switcher-bottom">
+            <div class="col-12 col-md-7 offset-lg-1 switcher-bottom">
               <div class="parallax-window" data-parallax="scroll" data-speed=".7" data-image-src="assets/images/process/malt-grains-lg.jpg"></div>
             </div>
           </div>
@@ -166,7 +166,7 @@ onde a selecção da matéria-prima é o principal segredo, começando pela ÁGU
             <div class="col-12 col-md-7">
               <div class="parallax-window" data-parallax="scroll" data-speed=".7" data-image-src="assets/images/process/boiling-lg.jpg"></div>
             </div>
-            <div class="col-11 col-md-4 offset-md-1 process-phase-container">
+            <div class="col-11 col-md-5 col-lg-4 offset-lg-1 process-phase-container">
               <h3 class="process-phase-title">Fervura</h3>
               <h5 class="process-phase-description">Dá-se a esterilização do mosto, elimina substâncias indesejáveis e dá-se a fixação final do mosto.
 Nesta fase o lúpulo é adicionado, contribuindo assim com o sabor amargo e os aromas de cerveja.</h5>
@@ -175,13 +175,13 @@ Nesta fase o lúpulo é adicionado, contribuindo assim com o sabor amargo e os a
           </div>
 
           <div class="row rightsided-wrapper process-phase">
-            <div class="col-11 col-md-4 switcher-top process-phase-container">
+            <div class="col-11 col-md-5 col-lg-4 switcher-top process-phase-container">
               <h3 class="process-phase-title">Fermentação</h3>
               <h5 class="process-phase-description">Os açúcares do mosto, pela ação da levedura, transformam-se em álcool e dióxido de carbono.
 Na fermentação começa com a adição da levedura selecionada para o tipo de cerveja desejado.</h5>
               <img class="illustrated-img" src="assets/images/process/fermentation-illu.png">
             </div>
-            <div class="col-12 col-md-7 offset-md-1 switcher-bottom">
+            <div class="col-12 col-md-7 offset-lg-1 switcher-bottom">
               <div class="parallax-window" data-parallax="scroll" data-speed=".7" data-image-src="assets/images/process/boiling-lg.jpg"></div>
             </div>
           </div>
@@ -190,7 +190,7 @@ Na fermentação começa com a adição da levedura selecionada para o tipo de c
             <div class="col-12 col-md-7">
               <div class="parallax-window" data-parallax="scroll" data-speed=".7" data-image-src="assets/images/process/maturation-lg.jpg"></div>
             </div>
-            <div class="col-11 col-md-4 offset-md-1 process-phase-container">
+            <div class="col-11 col-md-5 offset-lg-1 col-lg-4 process-phase-container">
               <h3 class="process-phase-title">Maturação</h3>
               <h5 class="process-phase-description">Período de estacionamento da cerveja, a Praxis, a temperaturas adequadas, a fim de permitir a libertação dos componentes voláteis indesejáveis.</h5>
               <img class="illustrated-img" src="assets/images/process/maturation-illu.png">
@@ -198,13 +198,13 @@ Na fermentação começa com a adição da levedura selecionada para o tipo de c
           </div>
 
           <div class="row rightsided-wrapper process-phase">
-            <div class="col-11 col-md-4 switcher-top process-phase-container">
+            <div class="col-11 col-md-5 col-lg-4 switcher-top process-phase-container">
               <h3 class="process-phase-title">Estabilização</h3>
               <h5 class="process-phase-description">Estabiliza-se a cerveja, numa temperatura entre os 0º e os 2º C, de modo a fixarem-se as propriedades da cerveja.
 Elimina-se os últimos elementos de turvação em suspensão, dando à cerveja a limpidez desejável.</h5>
               <img class="illustrated-img" src="assets/images/process/stability-illu.png">
             </div>
-            <div class="col-12 col-md-7 offset-md-1 switcher-bottom">
+            <div class="col-12 col-md-7 offset-lg-1 switcher-bottom">
               <div class="parallax-window" data-parallax="scroll" data-speed=".7" data-image-src="assets/images/process/stability-lg.jpg"></div>
             </div>
           </div>
@@ -213,14 +213,75 @@ Elimina-se os últimos elementos de turvação em suspensão, dando à cerveja a
             <div class="col-12 col-md-7">
               <div class="parallax-window" data-parallax="scroll" data-speed=".7" data-image-src="assets/images/process/packing-lg.jpg"></div>
             </div>
-            <div class="col-11 col-md-4 offset-md-1 process-phase-container">
+            <div class="col-11 col-md-4 offset-lg-1 process-phase-container">
               <h3 class="process-phase-title">Enchimento</h3>
               <h5 class="process-phase-description">A cerveja é então acondicionada para distribuição e consumo, em diversos tipos de embalagem: barril, garrafa, lata, etc...</h5>
             </div>
           </div>
         </section>
 
-        <section class="next-page mt-100">
+        <section class="top-sellers-section">
+          <h2 class="t-center light-title">Top sellers</h2>
+
+          <div class="others-wrapper">
+            <h1 class="big-type">2019</h1>
+
+            <div class="carousel swiper-container swiper-container-horizontal">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide-recommended">
+                <article class="beer-article ambar-article">
+                  <a class="beer-article-link" href="#">
+                    <div class="beer-article-media">
+                      <!--<div class="beer-bg"></div>-->
+                      <img src="./assets/images/ambar-reco.png">
+                    </div>
+                    <div class="beer-article-content">
+                      <h3 class="beer-article-hidden-title">Ambar</h3>
+                      <div class="t-center">
+                        <h4 class="beer-article-title">Ambar</h4>
+                        <button class="button dark">Comprar</button>
+                      </div>
+                    </div>
+                  </a>
+                </article>
+                </div>
+                <div class="swiper-slide-recommended">
+                <article class="beer-article pilsener-article">
+                  <a class="beer-article-link" href="#">
+                    <div class="beer-article-media">
+                      <img src="./assets/images/ambar-reco.png">
+                    </div>
+                    <div class="beer-article-content">
+                      <h3 class="beer-article-hidden-title">Pilsener</h3>
+                      <div class="t-center">
+                        <h4 class="beer-article-title">Pilsener</h4>
+                        <button class="button dark">Comprar</button>
+                      </div>
+                    </div>
+                  </a>
+                </article>
+                </div>
+                <div class="swiper-slide-recommended ipa-article">
+                <article class="beer-article">
+                  <a class="beer-article-link" href="#">
+                    <div class="beer-article-media">
+                      <img src="./assets/images/ambar-reco.png">
+                    </div>
+                    <div class="beer-article-content">
+                      <h3 class="beer-article-hidden-title">Ipa</h3>
+                      <div class="t-center">
+                        <h4 class="beer-article-title">Ipa</h4>
+                        <button class="button dark">Comprar</button>
+                      </div>
+                    </div>
+                  </a>
+                </article>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="next-page mt-10">
           <a href="" class="next-page-link">
             <div class="next-page-media">
               <img src="./assets/images/visit-banner.jpg" alt="Come visit us">
@@ -240,7 +301,7 @@ Elimina-se os últimos elementos de turvação em suspensão, dando à cerveja a
 
         <footer class="footer">
           <div class="row sitemap-wrapper">
-            <div class="col-12 col-md-3 media-links-wrapper d-flex justify-content-between flex-column">
+            <div class="col-sm-12 col-lg-3 media-links-wrapper d-flex justify-content-between flex-column">
               <div>
                 <img src="assets/images/praxis-logo.svg">
               </div>
@@ -263,19 +324,19 @@ Elimina-se os últimos elementos de turvação em suspensão, dando à cerveja a
                 </a>
               </div>
             </div>
-            <div class="col-5 col-md-2 sitemap">
+            <div class="col-6 col-lg-2 sitemap">
               <a href="shop.html"><h6 class="footer-link">Loja</h6></a>
               <a href="community.html"><h6 class="footer-link">Comunidade</h6></a>
               <a href="contacts.html"><h6 class="footer-link">Contactos</h6></a>
               <a href="community"><h6 class="footer-link">Eventos</h6></a>
             </div>
-            <div class="col-7 col-md-3 policies">
+            <div class="col-6 col-lg-3 policies">
               <a href="faqs.html" class="footer-link"><small>Perguntas frequentes</small></a>
               <a href="terms-conditions.html" class="footer-link"><small>Termos e Condições</small></a>
               <a href="privacy-policy.html" class="footer-link"><small>Política de Privacidade</small></a>
               <a href="complaint-book" class="footer-link"><small>Livro de reclamações</small></a>
             </div>
-            <div class="col-12 col-md-4 newsletter">
+            <div class="col-sm-12 col-lg-4 newsletter">
               <label>Fica a par das novidades</label>
               <div class="d-flex newsletter-field-container">
                 <input type="email" placeholder="Insere o teu email..." class="field-input light">
