--- a/museum.html
+++ b/museum.html
@@ -114,7 +114,7 @@
         <section class="fullscreen-wrapper dark-section heritage-section">
           <img class="bg-texture o-80" src="assets/images/beer-vector-texture.svg" alt="Seeds Background">
           <div class="row">
-            <div class="heritage-title-col col-12 col-md-8 col-lg-6 offset-lg-1 col-xl-5 offset-lx-2">
+            <div class="heritage-title-col col-12 col-md-8 col-lg-6 offset-lg-1 col-xl-5 offset-xl-2">
               <h3 class="heritage-title invert">Herança da cerveja de coimbra</h3>
               <h5 class="heritage-info">O Museu, este misto de restaurante, “laboratório” cervejeiro e núcleo 
                   museológico assume-se como legítimo herdeiro do legado da famosa cerveja de Coimbra, com mais de século
@@ -134,6 +134,7 @@
 
           <!--TimeLine start-->
           <div class="timeline">
+            <img class="bg-texture" src="./assets/images/background-texture-museum.png">
             <article class="timeline-panel-wrapper row">
               <div class="timeline-panel panel-left col-md-6">
                 <div class="timeline-panel-body">
@@ -146,7 +147,7 @@
                 </div>
               </div>
               <div class="timeline-panel col-md-6 timeline-inverted timeline-panel-img">
-                <div class="timeline-panel-body">
+                <div class="timeline-panel-body img-center">
                   <img src="assets/images/timeline/timeline-img-1.png" alt="">
                 </div>
               </div>
@@ -208,7 +209,7 @@
 
             <article class="timeline-panel-wrapper row">
               <h4 class="timeline-badge">2006</h4>
-              <div class="timeline-panel col-md-6 pl-80">
+              <div class="timeline-panel panel-left col-md-6">
                 <div class="timeline-panel-body">
                   <div class="timeline-body">
                     <p>2006 é Iniciado com a produção da microcervejeira PRAXIS, na zona historicamente emblemática de St.ª Clara, com o regresso à cerveja artesanal, 
@@ -220,15 +221,52 @@
               </div>
               <div class="timeline-panel col-md-6 timeline-inverted timeline-panel-img">
                 <div class="timeline-panel-body">
-                  <img src="assets/images/timeline/timeline-img-1.png" alt="">
+                  <img src="assets/images/timeline/timeline-img-3.png" alt="">
                 </div>
               </div>
             </article>
 
             <article class="timeline-panel-wrapper row">
-              <h4 class="timeline-badge">hoje</h4>
+              <h4 class="timeline-badge">2006</h4>
+              <div class="timeline-panel col-md-6 timeline-panel-img">
+                <div class="timeline-panel-body">
+                  <img src="assets/images/timeline/timeline-img-4.png" alt="">
+                </div>
+              </div>
+              <div class="timeline-panel panel-right timeline-inverted col-md-6">
+                <div class="timeline-panel-body">
+                  <div class="timeline-body">
+                    <p>2006 é Iniciado com a produção da microcervejeira PRAXIS, na zona historicamente emblemática de St.ª Clara, com o regresso à cerveja artesanal, 
+                      integrada no grupo das chamadas “cervejas especiais” e de boa qualidade ‒ assumindo-se a empresa como herdeira do legado da famosa cerveja de Coimbra, 
+                      com século e meio de tradição ‒ mas aproveitando dos mais avançados progressos tecnológicos e de fabrico, alcançados nos últimos dois séculos, 
+                      ou seja, desde o início da Revolução Industrial. Mas isto será já outra história…</p>
+                  </div>
+                </div>
+              </div>
+            </article>
+
+            <article class="timeline-panel-wrapper last-wrapper row">
+              <h4 class="timeline-badge">Hoje</h4>
             </article>
           </div>
+        </section>
+
+        <section class="next-page">
+          <a href="" class="next-page-link">
+            <div class="next-page-media">
+              <img src="./assets/images/visit-banner.jpg" alt="Come visit us">
+            </div>
+            <div class="next-page-content">
+              <div class="row">
+                <div class="col-12">
+                  <h6 class="next-page-surtitle">Descobre a história da cerveja conímbricense</h6>
+                </div>
+                <div class="col-12">
+                  <h3 class="next-page-title">Venha visitar-nos</h3>
+                </div>
+              </div>
+            </div>
+          </a>
         </section>
 
         
