--- a/museum.html
+++ b/museum.html
@@ -327,6 +327,6 @@
     </body>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="assets/js/parallax.js"></script>
     <script src="assets/js/navigation.js"></script>
+    <script src="assets/js/timeline.js"></script>
 </html>
