--- a/beers/ambar.html
+++ b/beers/ambar.html
@@ -207,6 +207,65 @@
           </div>
         </section>
 
+        <section class="recommended-sellers-section">
+          <div class="others-wrapper">
+            <div class="css-carousel scroll-container-recommended">
+              <div class="scroll-wrapper">
+                <div class="scroll-slide-recommended">
+                  <article class="beer-article ambar-article">
+                    <a class="beer-article-link" href="./beers/ambar.html">
+                      <div class="beer-article-media">
+                        <div class="beer-bg"></div>
+                        <img src="../assets/images/shop/ambar-shadow.png">
+                      </div>
+                      <div class="beer-article-content">
+                        <h3 class="beer-article-hidden-title">Ambar</h3>
+                        <div class="t-center">
+                          <h4 class="beer-article-title">Ambar</h4>
+                          <button href="beers/ambar.html" class="button dark">Descobrir</button>
+                        </div>
+                      </div>
+                    </a>
+                  </article>
+                </div>
+                <div class="scroll-slide-recommended">
+                  <article class="beer-article pilsener-article">
+                    <a class="beer-article-link" href="./beers/pilsener.html">
+                      <div class="beer-article-media">
+                        <div class="beer-bg"></div>
+                        <img src="../assets/images/shop/pilsener-shadow.png">
+                      </div>
+                      <div class="beer-article-content">
+                        <h3 class="beer-article-hidden-title">Pilsener</h3>
+                        <div class="t-center">
+                          <h4 class="beer-article-title">Pilsener</h4>
+                          <button class="button dark">Descobrir</button>
+                        </div>
+                      </div>
+                    </a>
+                  </article>
+                </div>
+                <div class="scroll-slide-recommended ipa-article">
+                <article class="beer-article">
+                  <a class="beer-article-link" href="./beers/ipa.html">
+                    <div class="beer-article-media">
+                      <div class="beer-bg"></div>
+                      <img src="../assets/images/shop/ipa-shadow.png">
+                    </div>
+                    <div class="beer-article-content">
+                      <h3 class="beer-article-hidden-title">Ipa</h3>
+                      <div class="t-center">
+                        <h4 class="beer-article-title">Ipa</h4>
+                        <button href="beers/ipa.html" class="button dark">Descobrir</button>
+                      </div>
+                    </div>
+                  </a>
+                </article>
+              </div>
+            </div>
+          </div>
+        </section>
+
         <footer class="footer">
           <div class="row sitemap-wrapper">
             <div class="col-sm-12 col-lg-3 media-links-wrapper d-flex justify-content-between flex-column">
